tests/max_encoded_len_ui/missing_crate_specifier.stderr
error: Invalid attribute: only `#[codec(dumb_trait_bound)]`, `#[codec(crate = path::to::crate)]`, `#[codec(encode_bound(T: Encode))]`, `#[codec(decode_bound(T: Decode))]`, or `#[codec(mel_bound(T: MaxEncodedLen))]` are accepted as top attribute
 --> tests/max_encoded_len_ui/missing_crate_specifier.rs:4:9
  |
4 | #[codec(parity_scale_codec)]
  |         ^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `parity_scale_codec::MaxEncodedLen`
 --> tests/max_encoded_len_ui/missing_crate_specifier.rs:1:34
  |
1 | use parity_scale_codec::{Encode, MaxEncodedLen};
  |                                  ^^^^^^^^^^^^^ no `MaxEncodedLen` in the root
  |
note: found an item that was configured out
 --> src/lib.rs
  |
  | pub use max_encoded_len::MaxEncodedLen;
  |                          ^^^^^^^^^^^^^
  = note: the item is gated behind the `max-encoded-len` feature
note: found an item that was configured out
 --> src/lib.rs
  |
  | pub use parity_scale_codec_derive::MaxEncodedLen;
  |                                    ^^^^^^^^^^^^^

error: cannot determine resolution for the derive macro `MaxEncodedLen`
 --> tests/max_encoded_len_ui/missing_crate_specifier.rs:3:18
  |
3 | #[derive(Encode, MaxEncodedLen)]
  |                  ^^^^^^^^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports

error[E0599]: no function or associated item named `max_encoded_len` found for struct `Example` in the current scope
 --> tests/max_encoded_len_ui/missing_crate_specifier.rs:8:19
  |
5 | struct Example;
  | -------------- function or associated item `max_encoded_len` not found for this struct
...
8 |     let _ = Example::max_encoded_len();
  |                      ^^^^^^^^^^^^^^^ function or associated item not found in `Example`
